Final Final Final Commit

--- a/script.ipynb
+++ b/script.ipynb
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "0ef362d2",
    "metadata": {},
    "outputs": [],
@@ -379,7 +379,21 @@
     "        self.discount = float(self.discount)\n",
     "\n",
     "    def total(self):\n",
-    "        return round(self.price * self.quantity * (1 - self.discount), 2)"
+    "        return round(self.price * self.quantity * (1 - self.discount), 2)\n",
+    "    \n",
+    "class Cities:\n",
+    "    def __init__(self, row):\n",
+    "        self.city = row[\"city\"]\n",
+    "        self.state_id = row[\"state_id\"]\n",
+    "        self.state_name = row[\"state_name\"]\n",
+    "        self.population = row[\"population\"]\n",
+    "        self.lat = row[\"lat\"]\n",
+    "        self.lng = row[\"lng\"]\n",
+    "        self.military = row[\"military\"]\n",
+    "        self.incorporated = row[\"incorporated\"]\n",
+    "        self.timezone = row[\"timezone\"]\n",
+    "        self.ranking = row[\"ranking\"]\n",
+    "        self.source = row[\"source\"] "
    ]
   },
   {
@@ -392,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "fa9c48df",
    "metadata": {},
    "outputs": [
@@ -409,7 +423,10 @@
     "    return [Transaction(row) for _, row in df.iterrows()]\n",
     "\n",
     "transactions = load(df_sales)\n",
-    "print(f\"Loaded {len(transactions)} transactions\")"
+    "print(f\"Loaded {len(transactions)} transactions\")\n",
+    "\n",
+    "def load_cities(df) -> list[Cities]:\n",
+    "    return [Cities(row) for _, row in df.iterrows()]    "
    ]
   },
   {
