--- a/script.ipynb
+++ b/script.ipynb
@@ -381,19 +381,19 @@
     "    def total(self):\n",
     "        return round(self.price * self.quantity * (1 - self.discount), 2)\n",
     "    \n",
-    "class Cities:\n",
-    "    def __init__(self, row):\n",
-    "        self.city = row[\"city\"]\n",
-    "        self.state_id = row[\"state_id\"]\n",
-    "        self.state_name = row[\"state_name\"]\n",
-    "        self.population = row[\"population\"]\n",
-    "        self.lat = row[\"lat\"]\n",
-    "        self.lng = row[\"lng\"]\n",
-    "        self.military = row[\"military\"]\n",
-    "        self.incorporated = row[\"incorporated\"]\n",
-    "        self.timezone = row[\"timezone\"]\n",
-    "        self.ranking = row[\"ranking\"]\n",
-    "        self.source = row[\"source\"] "
+    "#class Cities:\n",
+    " #   def __init__(self, row):\n",
+    "  #      self.city = row[\"city\"]\n",
+    "   #     self.state_id = row[\"state_id\"]\n",
+    "    #    self.state_name = row[\"state_name\"]\n",
+    "     #   self.population = row[\"population\"]\n",
+    "      #  self.lat = row[\"lat\"]\n",
+    "       # self.lng = row[\"lng\"]\n",
+    "        #self.military = row[\"military\"]\n",
+    "        #self.incorporated = row[\"incorporated\"]\n",
+    "        #self.timezone = row[\"timezone\"]\n",
+    "        #self.ranking = row[\"ranking\"]\n",
+    "        #self.source = row[\"source\"] "
    ]
   },
   {
@@ -425,8 +425,8 @@
     "transactions = load(df_sales)\n",
     "print(f\"Loaded {len(transactions)} transactions\")\n",
     "\n",
-    "def load_cities(df) -> list[Cities]:\n",
-    "    return [Cities(row) for _, row in df.iterrows()]    "
+    "#def load_cities(df) -> list[Cities]:\n",
+    " #   return [Cities(row) for _, row in df.iterrows()]    "
    ]
   },
   {
